--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
 <div class="navbar">
   <a href="index.html">Home</a>
 <div class="subnavbtn">
-  <a href="Sport.html">Sport</a>
+  <a href="sport.html">Sport</a>
 <div class="navbar">
-  <a href="Landen.html">Landen</a>
+  <a href="landen.html">Landen</a>
 <div class="navbar">
-    <a href="Benodigdheden.html">Benodigdheden</a>
+    <a href="benodigdheden.html">Benodigdheden</a>
 <div class="navbar">
-  <a href="Nederland.html">Nederland</a>
+  <a href="nederland.html">Nederland</a>
 </div>
 <img src="skieen hompage.jpg" width="400" height="250">
 <h2>Dit is mijn website</h2>
