--- a/Landen.html
+++ b/Landen.html
@@ -87,46 +87,46 @@
   <div class="navbar">
     <a href="index.html">Home</a>
   <div class="subnavbtn">
-    <a href="Sport.html">Sport</a>
+    <a href="sport.html">Sport</a>
   <div class="navbar">
-    <a href="Landen.html">Landen</a>
+    <a href="landen.html">Landen</a>
   <div class="navbar">
-      <a href="Benodigdheden.html">Benodigdheden</a>
+      <a href="benodigdheden.html">Benodigdheden</a>
   <div class="navbar">
-    <a href="Nederland.html">Nederland</a>
+    <a href="nederland.html">Nederland</a>
   </div>
 
   <main>
     <h2>De beste ski landen in Europa:</h2>
     <article>
-      <h2>Oosterijk</h2>
+      <h2>Oostenrijk</h2>
       <img src="oosterlijk.jpg" width="400" height="250">
-      <p>Oosterijk heeft 119 skigebieden. Je kan onderandere skieen de volgende skigebieden: Ski Arlberg, SkiWelt Wilder Kaiser-Brixental,Skicircus Saalbach Hinterglemm Leogang Fieberbrunn.</p>
+      <p>Oostenrijk heeft 119 skigebieden. Je kan onder andere skieen de volgende skigebieden: Ski Arlberg, SkiWelt Wilder, Kaiser-Brixental, Fieberbrunn.</p>
         <p>Een week skieen in oosterlijk kost gemiddeld 1500 euro pp.</p>
     </article>
     <article>
       <h2>Frankrijk</h2>
       <img src="frankrijk.jpg" width="400" height="250">
-      <p>Frankrijk heeft 71 skigebieden. Je kan onderander skieen in de volgende gebieden:Val Thorens, Méribel, Les Menuires.</p>
-        <p>Een week skieen kost voor allen de ski pas gemiddeld 700 euro pp</p>
+      <p>Frankrijk heeft 71 skigebieden. Je kan onder ander skieen in de volgende gebieden: Val Thorens, Méribel, Les Menuires.</p>
+        <p>Een week skieen kost voor alleen de ski pas gemiddeld 700 euro pp</p>
     </article>
     <article>
       <h2>Duitsland</h2>
       <img src="duitsland.jpg" width="400" height="250">
-      <p>Duitsland heeft 49 skigebieden in totaal. Je kan onderander skieen in: Winterberg in het Sauerland, het Beierse Woud, het Zwarte Woud of de Duitse Alpen.</p>
+      <p>Duitsland heeft 49 skigebieden in totaal. Je kan onder ander skieen in: Winterberg in het Sauerland, het Beierse Woud, het Zwarte Woud of de Duitse Alpen.</p>
         <p>Winterberg staat vooral bekend om de lage prijs. Dat trekt veel jongeren aan.</p>
     </article>
     <article>
       <h2>Zwitserland</h2>
       <img src="zwitserland.jpg" width="250" height="350">
-      <p>Zwitserland heeft 71 skigebieden. Je kan onderandere skieen in de volgede gebieden: Davos, Laax, Les Quatre Vallées, Zermatt-Matterhorn.</p>
+      <p>Zwitserland heeft 71 skigebieden. Je kan onder andere skieen in de volgende gebieden: Davos, Laax, Les Quatre Vallées, Zermatt-Matterhorn.</p>
         <p>De ski pas is hier alleen al 85 euro per dag, dus dat is voor een week skieen al 595 euro.</p>
     </article>
     <article>
       <h2>Italië</h2>
       <img src="italie.jpg" width="400" height="250">
-      <p>Italië heeft 43 skigebieden. Je kan onderander skieen in de volgende gebieden: Livigno, Alta Badia, Kronplatz.</p>
-        <p>Voor een ski pas betaal je 44 euro per dag, dus voor 7 dagen 308 euro</p>
+      <p>Italië heeft 43 skigebieden. Je kan onder ander skieen in de volgende gebieden: Livigno, Alta Badia, Kronplatz.</p>
+        <p>Voor een ski pas betaal je 44 euro per dag, dus voor 7 dagen betaal je 308 euro</p>
     </article>
   </main>
 
