--- a/Nederland.html
+++ b/Nederland.html
@@ -92,17 +92,17 @@ td{
   <div class="navbar">
     <a href="index.html">Home</a>
   <div class="subnavbtn">
-    <a href="Sport.html">Sport</a>
+    <a href="sport.html">Sport</a>
   <div class="navbar">
-    <a href="Landen.html">Landen</a>
+    <a href="landen.html">Landen</a>
   <div class="navbar">
-      <a href="Benodigdheden.html">Benodigdheden</a>
+      <a href="benodigdheden.html">Benodigdheden</a>
   <div class="navbar">
-    <a href="Nederland.html">Nederland</a>
+    <a href="nederland.html">Nederland</a>
   </div>
-<p> Je hebt in Nederland 7 indor skibanen. </p>
-<p>Je hebt ook borstelbanen, die heb ik niet megenpomen in de tabel.</p>
-<p>Zie onderaan een paar afbeeldingen hoe de indoorbanen eruit zien.</p>
+<p> Je hebt in Nederland 7 indoor skibanen. </p>
+<p>Je hebt ook borstelbanen in Nederland, die heb ik niet megenomen in de tabel.</p>
+<p>Zie onderaan een paar afbeeldingen hoe de indoorbanen eruitzien.</p>
   <table style="width:100%">
     <tr>
       <td>Skihallen in NL</td>
@@ -110,9 +110,9 @@ td{
       <td>Snowworld Landgraaf</td>
       <td>Snowworld Terneuzen</td>
       <td>Snowworld Amsterdam</td>
-      <td>Snowworld Zoeremeer</td>
+      <td>Snowworld Zoetermeer</td>
       <td>Snowworld Recphen</td>
-      <td>de uithof Denhaag</td>
+      <td>de uithof Den Haag</td>
     </tr>
     <tr>
       <td>Aantal pistes</td>
@@ -126,9 +126,9 @@ td{
     </tr>
     <tr>
       <td>Aantal liftjes</td>
-      <td>2 loopbanden, 1 sleeplift</td>
+      <td>2 lopendebanden, 1 sleeplift</td>
       <td>1 stoeltjes lift, 3 sleepliften, 4 lopendebanden</td>
-      <td>3 sleepliften, 1 lopende band</td>
+      <td>3 sleepliften, 1 lopendeband</td>
       <td>2 sleepliften, 1 lopendeband</td>
       <td>5 sleepliften, 5 lopendebanden</td>
       <td>1 sleeplift, 3 lopendebanden</td>
