--- a/benodigdheden.html
+++ b/benodigdheden.html
@@ -84,32 +84,32 @@
   <div class="navbar">
     <a href="index.html">Home</a>
   <div class="subnavbtn">
-    <a href="Sport.html">Sport</a>
+    <a href="sport.html">Sport</a>
   <div class="navbar">
-    <a href="Landen.html">Landen</a>
+    <a href="landen.html">Landen</a>
   <div class="navbar">
-      <a href="Benodigdheden.html">Benodigdheden</a>
+      <a href="benodigdheden.html">Benodigdheden</a>
   <div class="navbar">
-    <a href="Nederland.html">Nederland</a>
+    <a href="nederland.html">Nederland</a>
   </div>
 
 <h2>Ski's</h2>
 <p>Het belangrijkste is natuurlijk ski's.</p>
 <h2>Skischoenen</h2>
-<p>Om in je skischoenen te klikken heb je skischoenen nodig. Het zijn niet de meest comfortabele schoenen maar het zorgt voor stevigheid en een juiste houding tijdens het skieën.</p>
+<p>Om in je ski's te klikken heb je skischoenen nodig. Het zijn niet de meest comfortabele schoenen maar het zorgt voor stevigheid en een juiste houding tijdens het skieën.</p>
 <h2>Skistokken</h2>
-<p>Skistokken zijn niet noodzakelijk vooral niet als je net begint, maar het zorgt voor een goede balans, het helpt om ritme te houden en de hoog-laag bewegingen gaan ook makkelijker met stokken.</p>
+<p>Skistokken zijn niet noodzakelijk vooral niet als je net begint, maar het zorgt voor een goede balans, het helpt om ritme te houden. De hoog-laag bewegingen gaan ook makkelijker met stokken.</p>
 <h2>Hoofdband</h2>
 <p>Tijdens het skienen is het natuurlijk niet heel warm dus het is lekker om onder je helm een dunne hoofdband te dragen. Een buff zou ook kunnen.</p>
 <img src="outfit.jpg" width="400" height="250">
 <h2>Skibril/ zonnebril en -helm</h2>
-<p>Ook iets wat echt heel belangrijk is is je helm. Een ongeluk zit in een klein hoekje vooral op de piste. Jij kan wel rekening houden met iedereen maar je weet niet of iedereen dat ook doet bij jou. Een bril erbij is ook fijn, als je zon schijnt weerkaatst het op de sneeuw en is het dus dubbel zo fel.</p>
+<p>Ook iets wat echt heel belangrijk is is je helm. Een ongeluk zit in een klein hoekje vooral op de piste. Jij kan wel rekening houden met iedereen maar je weet niet of iedereen dat ook doet bij jou. Een bril erbij is ook fijn, het kan een speciale ski bril zijn maar een normale zonnebril kan ook. Als je zon schijnt weerkaatst het op de sneeuw en is het dus dubbel zo fel.</p>
 <img src="helm2.0.jpg" width="400" height="300">
 <h2>Skibroek,-jas en termokleding</h2>
-<p>Om het lekker warm te hebben draag je met skieen veel lagen meestal zowiso meer dan 2. Je doet eerst je termo kleding, daarna eventueel een truiof een overbroek. Als laatste laag doe je dan je ski jas en broek.</p>
+<p>Om het lekker warm te hebben draag je met skieen veel lagen kleding. Je doet eerst je termo kleding, daarna eventueel een trui of een overbroek. Als laatste laag doe je dan je ski jas en ski broek.</p>
 <img src="outfit2.0.jpg" width="300" height="400">
 <h2>Handschoenen</h2>
-<p>Een musthave zijn echt je handschoenen, anders vriezen je handen echt af.</p>
+<p>Een musthave zijn echt je handschoenen, anders vriezen je handen er echt af.</p>
 <h2>Skisokken</h2>
 <p>Ook dit is weer zodat je het lekker warm hebt. In de skischoenen kan je nouwelijks je tenen bewegen dus die worden echt heel koud</p>
 
