--- a/sport.html
+++ b/sport.html
@@ -81,13 +81,13 @@
 <div class="navbar">
   <a href="index.html">Home</a>
 <div class="subnavbtn">
-  <a href="Sport.html">Sport</a>
+  <a href="sport.html">Sport</a>
 <div class="navbar">
-  <a href="Landen.html">Landen</a>
+  <a href="landen.html">Landen</a>
 <div class="navbar">
-    <a href="Benodigdheden.html">Benodigdheden</a>
+    <a href="benodigdheden.html">Benodigdheden</a>
 <div class="navbar">
-  <a href="Nederland.html">Nederland</a>
+  <a href="nederland.html">Nederland</a>
 </div>
 <h2>Alpine skieën</h2>
 <p>Het alpineskiën onderscheidt zich van het skiën op de Noordse wijze doordat men bij het alpineskiën met de gehele voet vast geklemd is aan de ski. Bij de Noordse wijze is men alleen met de voorvoet bevestigd en zijn de hakken vrij. Het alpineskiën is ontstaan toen de ski zijn weg vond naar de steilere en hogere Alpen.</p>
