--- a/Landen.html
+++ b/Landen.html
@@ -93,7 +93,7 @@
   <div class="navbar">
       <a href="benodigdheden.html">Benodigdheden</a>
   <div class="navbar">
-    <a href="nederland.html">Nederland</a>
+    <a href="Nederland.html">Nederland</a>
   </div>
 
   <main>
