--- a/Nederland.html
+++ b/Nederland.html
@@ -98,7 +98,7 @@ td{
   <div class="navbar">
       <a href="benodigdheden.html">Benodigdheden</a>
   <div class="navbar">
-    <a href="nederland.html">Nederland</a>
+    <a href="Nederland.html">Nederland</a>
   </div>
 <p> Je hebt in Nederland 7 indoor skibanen. </p>
 <p>Je hebt ook borstelbanen in Nederland, die heb ik niet megenomen in de tabel.</p>
