--- a/benodigdheden.html
+++ b/benodigdheden.html
@@ -90,7 +90,7 @@
   <div class="navbar">
       <a href="benodigdheden.html">Benodigdheden</a>
   <div class="navbar">
-    <a href="nederland.html">Nederland</a>
+    <a href="Nederland.html">Nederland</a>
   </div>
 
 <h2>Ski's</h2>
