--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <div class="navbar">
     <a href="benodigdheden.html">Benodigdheden</a>
 <div class="navbar">
-  <a href="nederland.html">Nederland</a>
+  <a href="Nederland.html">Nederland</a>
 </div>
 <img src="skieen hompage.jpg" width="400" height="250">
 <h2>Dit is mijn website</h2>
