--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <div class="subnavbtn">
   <a href="sport.html">Sport</a>
 <div class="navbar">
-  <a href="landen.html">Landen</a>
+  <a href="Landen.html">Landen</a>
 <div class="navbar">
     <a href="benodigdheden.html">Benodigdheden</a>
 <div class="navbar">
