--- a/sport.html
+++ b/sport.html
@@ -83,7 +83,7 @@
 <div class="subnavbtn">
   <a href="sport.html">Sport</a>
 <div class="navbar">
-  <a href="Landen.html">Landen</a>
+  <a href="landen.html">Landen</a>
 <div class="navbar">
     <a href="benodigdheden.html">Benodigdheden</a>
 <div class="navbar">
